# kg-chat

./: .cruft.json  .gitignore  CONTRIBUTING.md  README.md  commands.html  examples.html  genindex.html  index.html  introduction.html  kg_chat.html  kg_chat.implementations.html  kg_chat.interface.html  kg_chat.schema.html  modules.html  neo4j_db_settings.conf  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.html  supported_backends.html  supported_llms.html  tox.ini  visualization.html
.github/workflows/: deploy-docs.yml  qc.yml
_sources/: commands.rst.txt  examples.rst.txt  index.rst.txt  introduction.rst.txt  kg_chat.implementations.rst.txt  kg_chat.interface.rst.txt  kg_chat.rst.txt  kg_chat.schema.rst.txt  modules.rst.txt  setup.rst.txt  supported_backends.rst.txt  supported_llms.rst.txt  visualization.rst.txt
_static/: documentation_options.js
conf_files/: apoc.conf  neo4j_db_settings.conf
docs/: commands.rst  conf.py  index.rst  introduction.rst  setup.rst  supported_llms.rst  visualization.rst
src/kg_chat/: __init__.py  app.py  cli.py  constants.py  main.py  utils.py
src/kg_chat/assets/: styles.css
src/kg_chat/config/: llm_config.py
src/kg_chat/graph_output/: knowledge_graph.html
src/kg_chat/implementations/: __init__.py  duckdb_implementation.py  neo4j_implementation.py
src/kg_chat/interface/: __init__.py  database_interface.py
src/kg_chat/schema/: __init__.py  graph_schema.py
tests/: __init__.py  demo_test.py  test_duckdb_impl.py  test_neo4j_impl.py
tests/input/: nodes.tsv
